--- a/QB [개인과제] 마크다운 정리(10.19)/QB-04-20210962-장태현-markdown.md
+++ b/QB [개인과제] 마크다운 정리(10.19)/QB-04-20210962-장태현-markdown.md
@@ -1,1 +1,131 @@
  ## QB-04-20210962-장태현-markdown.md
+
+# 헤더
+* H1 ~ H6까지 테그를 #으로 표현
+
+```
+# 헤더 (h1)
+## 헤더 (h2)
+### 헤더 (h3)
+#### 헤더 (h4)
+##### 헤더 (h5)
+###### 헤더 (h6)
+```
+* 결과
+# 헤더 (h1)
+## 헤더 (h2)
+### 헤더 (h3)
+#### 헤더 (h4)
+##### 헤더 (h5)
+###### 헤더 (h6)
+
+# 수평선
+* ```<hr />```와 동일한 결과를 출력
+* ’-‘, ‘*‘, ‘_‘을 세개 이상 나열하면 수평선을 만듦
+* 단락 나누기 용도로 많이 사용.
+
+```
+***
+___
+___
+```
+* 결과
+***
+___
+___
+
+# 강조
+
+ ```
+ *single asterisks* - 기울임체
+_single underscores_ - 기울임체
+**double asterisks** - 굵은글씨체
+__double underscores__ - 기울임체/굵은글씨체
+***triple underscores*** - 기울임체/굵은글씨체
+~~cancelline~~ - 취소줄
+ ```
+  * 결과<br>
+ *single asterisks* - 기울임체<br>
+_single underscores_ - 기울임체<br>
+**double asterisks** - 굵은글씨체<br>
+__double underscores__ - 기울임체/굵은글씨체<br>
+***triple underscores*** - 기울임체/굵은글씨체<br>
+~~cancelline~~ - 취소줄<br>
+
+# 인용
+* 분문 중 인용된 글을 표시할 때 사용하며, “>” 기호를 모든 줄 앞에 붙임.
+
+```
+> 인용되는 글입니다.
+>> 인용되는 내용 안에서 다시 인용되는 부분입니다.
+> 인용되는 글의 두 번째 줄.
+> 인용되는 글의 세 번째 줄.
+```
+* 결과
+> 인용되는 글입니다.</br>
+>> 인용되는 내용 안에서 다시 인용되는 부분입니다.</br>
+>
+> 인용되는 글의 두 번째 줄.</br>
+> 인용되는 글의 세 번째 줄.
+
+# 리스트
+* MarkDown으로 숫자 리스트, 블릿 리스트를 표현할 수 있음.
+
+```
+* 리스트1
++ 리스트2
+    * 서브 리스트1
+    * 서브리스트 2
+- 리스트3
+    1. 순차 리스트1
+    2. 순차 리스트2
+```
+* 결과
+* 리스트1
++ 리스트2
+    * 서브 리스트1
+    * 서브리스트 2
+- 리스트3
+    1. 순차 리스트1
+    2. 순차 리스트2
+
+# 링크
+
+```
+[xogus3492's github](http://github.com/xogus3492)
+```
+* 결과<br>
+[xogus3492's github](http://github.com/xogus3492)
+
+# 앵커
+
+```
+### 테이블 구성
+  * [1장](#chapter-1)
+  * [2장](#chapter-2)
+  * [3장](#chapter-3)
+```
+```
+###### 1장 <a id="chapter-1"></a>
+1장의 내용은.....
+
+###### 2장 <a id="chapter-2"></a>
+2장의 내용은.....
+
+###### 3장 <a id="chapter-3"></a>
+3장의 내용은.....
+```
+* 결과
+### 테이블 구성
+  * [1장](#chapter-1)
+  * [2장](#chapter-2)
+  * [3장](#chapter-3)
+
+###### 1장 <a id="chapter-1"></a>
+1장의 내용은.....
+
+###### 2장 <a id="chapter-2"></a>
+2장의 내용은.....
+
+###### 3장 <a id="chapter-3"></a>
+3장의 내용은.....
