--- a/QB [개인과제] 마크다운 정리(10.19)/QB-05-20212244-이세진-markdown.md
+++ b/QB [개인과제] 마크다운 정리(10.19)/QB-05-20212244-이세진-markdown.md
@@ -1,1 +1,171 @@
 QB-05-20212244-이세진-markdown.md
+
+마크다운 언어 정리
+==============
+<br>
+
+마크다운(Markdown)
+----------------
+ >-  html로 변환할 수 있는 읽고 쓰기 쉬운 마크업 언어
+ >-  github 저장소에 대한 정보를 담은 README.md 파일에 사용하면서 인기를 얻음
+ >-  설치 방법, 소스코드 설명, 이슈 등을 간단히 기록하여 눈에 띔
+
+### 마크다운 장점
+ >-  간결하다
+ >-  별도의 도구없이 작성가능하다
+ >-  다양한 형태로 변환이 가능하다
+ >-  텍스트(Text)로 저장되기 때문에 용량이 적어 보관이 용이하다
+ >-  텍스트파일이기 때문에 버전관리 시스템을 이용하여 변경이력을 관리할 수 있다
+ >-  지원하는 프로그램과 플랫폼이 다양하다
+
+### 마크다운 단점
+ >-  표준이 없다
+ >-  표준이 없기 때문에 도구에 따라서 변환방식이나 생성물이 다르다
+ >-  모든 HTML 마크업을 대신하지 못한다
+<br>
+<br>
+
+
+마크다운 활용법
+------------
+### 1. 헤더Headers
+  -  큰제목    
+   ``` 
+   문서 제목    
+   =======
+   ```    
+  
+  -  작은제목    
+   ``` 
+   문서 부제목      
+   --------
+   ```    
+  
+  -  글머리
+   ```
+   # h1
+   ## h2
+   ### h3
+   #### h4
+   ##### h5
+   ###### h6
+   ```
+   # h1
+   ## h2
+   ### h3
+   #### h4
+   ##### h5
+   ###### h6
+   <br>
+   
+ ### 2. 블록 코드
+   > `>` 블록 인용 문자를 이용
+   > `>    >`
+   > `>    >    >`
+   > 한 줄 들여쓰기
+   >  > 두 줄 들여쓰기
+   >  >  > 세 줄 들여쓰기
+ <br>
+ 
+ ### 3. 목록
+  - 순서(번호)있는 목록
+        순서 있는 목록은 숫자와 점 사용
+        
+        1. 하나    
+        2. 두울    
+        3. 세엣    
+        
+   - 순서 없는(`*`, `+`, `-`) 목록
+        글머리 기호의 종류에 상관없이 해당 위치에 정해진 모양이 보여짐
+        * 하나
+           + 두울
+              - 세엣
+<br>
+
+### 4. 코드
+ #### 들여쓰기
+     - 4개 공백 또는 탭으로 들여쓰기 가능하며, 들여쓰지 않은 행을 만날때까지 변환이 계속된다. 
+       
+         하나
+                두울
+         세엣
+   
+ #### 코드블록 
+  - `<pre><code>{code}</code></pre>` 사용
+ <br>
+         <pre>
+         <code>
+         public class BootSpringBootApplication {
+           public static void main(String[] args) {
+             System .out.println("Hello, Honeymon");
+           }
+         }
+         </code>
+         </pre>
+       
+   - ` 사용
+<br> 
+
+         ```    
+            안녕하세요    
+            
+         ``` 
+ <br>
+ 
+ #### 5. 수평선
+        *   *   *    
+        ***
+        *****
+        - - -
+        -----------------
+ <br>
+ 
+ #### 6. 링크
+ -  참조링크
+    ```
+        [link keyword][id]
+
+        [id]: URL "Optional Title here"
+
+         // code
+        Link: [Google][googlelink]
+
+        [googlelink]: https://google.com "Go google"
+    ```
+  - 외부링크
+    ```
+        사용문법: [Title](link)
+        
+        적용예: [Google](https://google.com, "google link")
+    ```
+  - 자동연결
+    ```
+        일반적인 URL 혹은 이메일주소인 경우 적절한 형식으로 링크를 형성한다.
+
+        * 외부링크: <http://example.com/>
+        * 이메일링크: <address@example.com>
+    ```
+ <br>
+ 
+ #### 7. 강조
+    ```
+        *single asterisks*
+        _single underscores_
+        **double asterisks**
+        __double underscores__
+        ~~cancelline~~
+    ```
+ <br>
+ 
+ #### 8. 이미지
+    ```
+        ![Alt text](/path/to/img.jpg)
+        ![Alt text](/path/to/img.jpg "Optional title")
+    ```
+ <br>
+ 
+ #### 9. 줄바꿈
+   공백 3칸 이상 (`  `) 넣으면 줄 바뀐다. 
+         // code바
+         // code
+         // code
